fix: actually remove cookies when logging out
