# src/auth/steam/routes/logout.rs
@@ -1,24 +1,21 @@
 use axum::extract::Query;
-use axum::http::Uri;
+use axum::response::Redirect;
 use axum_extra::extract::cookie::Cookie;
 use axum_extra::extract::CookieJar;
 use serde::Deserialize;
-use sqlx::QueryBuilder;
+use url::Url;
 use utoipa::IntoParams;
 
 use crate::auth::Session;
 use crate::extractors::{SessionToken, State};
-use crate::url::UrlExt;
 use crate::{responses, steam, Result};
 
 /// Query parameters for logging out.
 #[derive(Debug, Default, Deserialize, IntoParams)]
 #[serde(default)]
 pub struct Logout {
-	/// Invalidate all existing sessions, not just the one for the current
-	/// subdomain.
-	#[serde(default)]
-	pub invalidate_all_sessions: bool,
+	/// Redirect back to this URL once the logout process is complete.
+	pub origin_url: Option<Url>,
 }
 
 /// Logout, invalidating all existing sessions.
@@ -31,7 +28,7 @@ pub struct Logout {
   path = "/auth/steam/logout",
   params(Logout),
   responses(
-    responses::Ok<()>,
+    responses::SeeOther,
     responses::Unauthorized,
     responses::InternalServerError,
   ),
@@ -41,44 +38,42 @@ pub struct Logout {
 )]
 pub async fn logout(
 	state: State,
-	cookies: CookieJar,
 	session: Session,
-	uri: Uri,
-	Query(Logout { invalidate_all_sessions }): Query<Logout>,
-) -> Result<CookieJar> {
-	let mut query = QueryBuilder::new(
+	mut cookies: CookieJar,
+	Query(Logout { origin_url }): Query<Logout>,
+) -> Result<(CookieJar, Redirect)> {
+	sqlx::query! {
 		r#"
 		UPDATE
 		  WebSessions
 		SET
 		  expires_on = CURRENT_TIMESTAMP()
 		WHERE
-		  steam_id =
+		  steam_id = ?
 		"#,
-	);
-
-	query.push_bind(session.steam_id).push(" AND (subdomain ");
-
-	if let Some(subdomain) = uri.subdomain() {
-		query.push(" = ").push_bind(subdomain);
-	} else {
-		query.push(" IS NULL ");
+		session.steam_id,
 	}
+	.execute(state.database())
+	.await?;
 
-	query.push(if invalidate_all_sessions {
-		" OR TRUE) "
-	} else {
-		")"
-	});
+	let config = state.config();
 
-	query.build().execute(state.database()).await?;
+	cookies = remove_cookie(cookies, steam::Player::COOKIE_NAME, &config);
+	cookies = remove_cookie(cookies, SessionToken::COOKIE_NAME, &config);
 
-	let mut cookies = cookies.remove(Cookie::from(SessionToken::COOKIE_NAME));
+	let redirect_to = origin_url
+		.as_ref()
+		.map(Url::as_str)
+		.unwrap_or(config.public_url.as_str());
 
-	// TODO(AlphaKeks): delete the cookies from the other subdomains as well
-	if invalidate_all_sessions {
-		cookies = cookies.remove(Cookie::from(steam::Player::COOKIE_NAME));
-	}
+	Ok((cookies, Redirect::to(redirect_to)))
+}
 
-	Ok(cookies)
+fn remove_cookie(cookies: CookieJar, name: &'static str, config: &crate::Config) -> CookieJar {
+	let mut cookie = Cookie::new(name, "");
+
+	cookie.set_domain(config.public_url.host().unwrap().to_string());
+	cookie.set_path("/");
+
+	cookies.remove(cookie)
 }
